fix: resolve vw overflow issue

--- a/src/views/App/App.module.css
+++ b/src/views/App/App.module.css
@@ -1,13 +1,13 @@
 .app {
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+::-webkit-scrollbar {
+  display: none;
+}
 .content {
-  /* max-width: 1280px; */
   flex-grow: 1;
   width: 100%;
-  /* display: flex; */
-  margin-top: 4rem;
+  padding-top: 4rem;
 }
